# TrainingTools

./: CMakeLists.txt
.github/workflows/: runTests.yml
src/: CMakeLists.txt
src/header/TrainingTools/: Error.h  GradientDescend.h  GradientDescendConjugate.h  GradientDescendFixed.h  MinimizeOrMaximizeAware.h  ModelAware.h  ParametersAware.h  QuasiNewton.h  Trainer.h
src/header/TrainingTools/bases/: HessianApproximator.h  IterativeTrainer.h  LineSearcher.h  ModelAware.h
src/header/TrainingTools/components/: HessianApproximator.h  IterationsAware.h  IterativeDescend.h  LineSearcher.h  Trainable.h  TrainableAware.h  Trainer.h
src/header/TrainingTools/interfaces/: IterationsAware.h  ModelAware.h  ParametersAware.h  SearchDirectionAware.h  Trainable.h  Trainer.h  Updatable.h
src/header/TrainingTools/iterative/: IterativeTrainer.h  SearchDirectionAware.h
src/header/TrainingTools/strategies/: BFGS.h  YundaSearcher.h  lBFGS.h
src/src/: Error.cpp  GradientDescendFixed.cpp  ModelAware.cpp
src/src/bases/: HessianApproximator.cpp  IterativeTrainer.cpp  ModelAware.cpp
src/src/components/: HessianApproximator.cpp  IterationsAware.cpp  IterativeDescend.cpp
src/src/interfaces/: IterationsAware.cpp
src/src/iterative/: IterationsAware.cpp  IterativeTrainer.cpp  ModelAware.cpp
src/src/iterative/direction_optimizer/: BisectionSearcher.cpp  FixedStep.cpp  YundaSearcher.cpp
src/src/iterative/hessian_approximators/: BFGS.cpp  HessianApproximator.cpp
src/src/strategies/: BFGS.cpp  YundaSearcher.cpp  lBFGS.cpp
tests/: CMakeLists.txt  Test01-GradientDescend.cpp  Test01-GradientDescendFixed.cpp  Test02-GradientDescend.cpp  Test02-GradientDescendConjugate.cpp  Test03-QuasiNewton.cpp  Utils.h
tests/src/: CMakeLists.txt
tests/src/header/: EasyTestFunction.h  MediumTestFunction.h  TestFunction.h  TestFunctions.h  TestSolver.h
tests/src/src/: TestFunction.cpp
(+13 files in other folders)
